Assignment3/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from c:\Users\EmChes\OneDrive - wtpvf\Documents\GitHub\CO3005_PPL_HK222\Assignment3\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'boolean'", "'do'", 
                     "'else'", "'false'", "'float'", "'for'", "'function'", 
                     "'if'", "'integer'", "'return'", "'string'", "'true'", 
                     "'while'", "'void'", "'out'", "'continue'", "'of'", 
                     "'inherit'", "'array'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "'!'", "'&&'", "'||'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'::'", "'('", "')'", "'['", 
                     "']'", "'.'", "','", "';'", "':'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "BOOLEAN", "DO", "ELSE", 
                      "FALSE", "FLOAT", "FOR", "FUNCTION", "IF", "INTEGER", 
                      "RETURN", "STRING", "TRUE", "WHILE", "VOID", "OUT", 
                      "CONTINUE", "OF", "INHERIT", "ARRAY", "ADD", "SUB", 
                      "MUL", "DIV", "MOD", "NOT", "AND", "OR", "EQUAL", 
                      "NEQUAL", "LT", "LTE", "GT", "GTE", "CONCAT", "LB", 
                      "RB", "LSB", "RSB", "DOT", "COMMA", "SM", "COLON", 
                      "LCB", "RCB", "ASS", "LINE_CMT", "BLOCK_CMT", "WS", 
                      "INTEGERLIT", "FLOATLIT", "STRINGLIT", "ID", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declares = 1
    RULE_declare = 2
    RULE_funcDecl = 3
    RULE_variaFuncList = 4
    RULE_variaFuncDeclarator = 5
    RULE_variableDeclList = 6
    RULE_varia_no_body = 7
    RULE_varia_yes_body = 8
    RULE_args = 9
    RULE_expList = 10
    RULE_typeType = 11
    RULE_arrayType = 12
    RULE_arraySize = 13
    RULE_variNoAuto = 14
    RULE_variType = 15
    RULE_funcType = 16
    RULE_statement = 17
    RULE_assStmt = 18
    RULE_ifStmt = 19
    RULE_forStmt = 20
    RULE_whileStmt = 21
    RULE_doWhileStmt = 22
    RULE_breakStmt = 23
    RULE_continueStmt = 24
    RULE_returnStmt = 25
    RULE_callStmt = 26
    RULE_callEsp = 27
    RULE_blockStmt = 28
    RULE_blockStmtbody = 29
    RULE_espresso = 30
    RULE_espresso1 = 31
    RULE_espresso2 = 32
    RULE_espresso3 = 33
    RULE_espresso4 = 34
    RULE_espresso5 = 35
    RULE_espresso6 = 36
    RULE_espresso7 = 37
    RULE_espresso10a = 38
    RULE_espresso11a = 39
    RULE_lhs = 40
    RULE_lhsop = 41
    RULE_booleanlit = 42
    RULE_arrayLit = 43
    RULE_elemArrays = 44
    RULE_elem = 45

    ruleNames =  [ "program", "declares", "declare", "funcDecl", "variaFuncList", 
                   "variaFuncDeclarator", "variableDeclList", "varia_no_body", 
                   "varia_yes_body", "args", "expList", "typeType", "arrayType", 
                   "arraySize", "variNoAuto", "variType", "funcType", "statement", 
                   "assStmt", "ifStmt", "forStmt", "whileStmt", "doWhileStmt", 
                   "breakStmt", "continueStmt", "returnStmt", "callStmt", 
                   "callEsp", "blockStmt", "blockStmtbody", "espresso", 
                   "espresso1", "espresso2", "espresso3", "espresso4", "espresso5", 
                   "espresso6", "espresso7", "espresso10a", "espresso11a", 
                   "lhs", "lhsop", "booleanlit", "arrayLit", "elemArrays", 
                   "elem" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    BOOLEAN=3
    DO=4
    ELSE=5
    FALSE=6
    FLOAT=7
    FOR=8
    FUNCTION=9
    IF=10
    INTEGER=11
    RETURN=12
    STRING=13
    TRUE=14
    WHILE=15
    VOID=16
    OUT=17
    CONTINUE=18
    OF=19
    INHERIT=20
    ARRAY=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    NOT=27
    AND=28
    OR=29
    EQUAL=30
    NEQUAL=31
    LT=32
    LTE=33
    GT=34
    GTE=35
    CONCAT=36
    LB=37
    RB=38
    LSB=39
    RSB=40
    DOT=41
    COMMA=42
    SM=43
    COLON=44
    LCB=45
    RCB=46
    ASS=47
    LINE_CMT=48
    BLOCK_CMT=49
    WS=50
    INTEGERLIT=51
    FLOATLIT=52
    STRINGLIT=53
    ID=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56
    ERROR_CHAR=57

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None






    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declares(self):
            return self.getTypedRuleContext(MT22Parser.DeclaresContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.declares()
            self.state = 93
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaresContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declare(self):
            return self.getTypedRuleContext(MT22Parser.DeclareContext,0)


        def declares(self):
            return self.getTypedRuleContext(MT22Parser.DeclaresContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declares




    def declares(self):

        localctx = MT22Parser.DeclaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declares)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.declare()
                self.state = 96
                self.declares()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcDecl(self):
            return self.getTypedRuleContext(MT22Parser.FuncDeclContext,0)


        def variableDeclList(self):
            return self.getTypedRuleContext(MT22Parser.VariableDeclListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declare




    def declare(self):

        localctx = MT22Parser.DeclareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declare)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.funcDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 102
                self.variableDeclList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.ID)
            else:
                return self.getToken(MT22Parser.ID, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def funcType(self):
            return self.getTypedRuleContext(MT22Parser.FuncTypeContext,0)


        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockStmtContext,0)


        def variaFuncList(self):
            return self.getTypedRuleContext(MT22Parser.VariaFuncListContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_funcDecl




    def funcDecl(self):

        localctx = MT22Parser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(MT22Parser.ID)
            self.state = 106
            self.match(MT22Parser.COLON)
            self.state = 107
            self.match(MT22Parser.FUNCTION)
            self.state = 108
            self.funcType()
            self.state = 109
            self.match(MT22Parser.LB)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.OUT) | (1 << MT22Parser.INHERIT) | (1 << MT22Parser.ID))) != 0):
                self.state = 110
                self.variaFuncList()


            self.state = 113
            self.match(MT22Parser.RB)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 114
                self.match(MT22Parser.INHERIT)
                self.state = 115
                self.match(MT22Parser.ID)


            self.state = 118
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariaFuncListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variaFuncDeclarator(self):
            return self.getTypedRuleContext(MT22Parser.VariaFuncDeclaratorContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def variaFuncList(self):
            return self.getTypedRuleContext(MT22Parser.VariaFuncListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variaFuncList




    def variaFuncList(self):

        localctx = MT22Parser.VariaFuncListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_variaFuncList)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.variaFuncDeclarator()
                self.state = 121
                self.match(MT22Parser.COMMA)
                self.state = 122
                self.variaFuncList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.variaFuncDeclarator()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariaFuncDeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typeType(self):
            return self.getTypedRuleContext(MT22Parser.TypeTypeContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_variaFuncDeclarator




    def variaFuncDeclarator(self):

        localctx = MT22Parser.VariaFuncDeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variaFuncDeclarator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 127
                self.match(MT22Parser.INHERIT)


            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.OUT:
                self.state = 130
                self.match(MT22Parser.OUT)


            self.state = 133
            self.match(MT22Parser.ID)
            self.state = 134
            self.match(MT22Parser.COLON)
            self.state = 135
            self.typeType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def varia_yes_body(self):
            return self.getTypedRuleContext(MT22Parser.Varia_yes_bodyContext,0)


        def varia_no_body(self):
            return self.getTypedRuleContext(MT22Parser.Varia_no_bodyContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def variType(self):
            return self.getTypedRuleContext(MT22Parser.VariTypeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_variableDeclList




    def variableDeclList(self):

        localctx = MT22Parser.VariableDeclListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_variableDeclList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 137
                self.varia_yes_body()
                pass

            elif la_ == 2:
                self.state = 138
                self.varia_no_body()
                self.state = 139
                self.match(MT22Parser.COLON)
                self.state = 142
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                    self.state = 140
                    self.variType()
                    pass
                elif token in [MT22Parser.ARRAY]:
                    self.state = 141
                    self.arrayType()
                    pass
                else:
                    raise NoViableAltException(self)

                pass


            self.state = 146
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Varia_no_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def varia_no_body(self):
            return self.getTypedRuleContext(MT22Parser.Varia_no_bodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varia_no_body




    def varia_no_body(self):

        localctx = MT22Parser.Varia_no_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varia_no_body)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(MT22Parser.ID)
                self.state = 149
                self.match(MT22Parser.COMMA)
                self.state = 150
                self.varia_no_body()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(MT22Parser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Varia_yes_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(MT22Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def varia_yes_body(self):
            return self.getTypedRuleContext(MT22Parser.Varia_yes_bodyContext,0)


        def espresso(self):
            return self.getTypedRuleContext(MT22Parser.EspressoContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ASS(self):
            return self.getToken(MT22Parser.ASS, 0)

        def variType(self):
            return self.getTypedRuleContext(MT22Parser.VariTypeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varia_yes_body




    def varia_yes_body(self):

        localctx = MT22Parser.Varia_yes_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_varia_yes_body)
        try:
            self.state = 169
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 154
                self.match(MT22Parser.ID)
                self.state = 155
                self.match(MT22Parser.COMMA)
                self.state = 156
                self.varia_yes_body()
                self.state = 157
                self.match(MT22Parser.COMMA)
                self.state = 158
                self.espresso(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 160
                self.match(MT22Parser.ID)
                self.state = 161
                self.match(MT22Parser.COLON)
                self.state = 164
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.AUTO, MT22Parser.BOOLEAN, MT22Parser.FLOAT, MT22Parser.INTEGER, MT22Parser.STRING]:
                    self.state = 162
                    self.variType()
                    pass
                elif token in [MT22Parser.ARRAY]:
                    self.state = 163
                    self.arrayType()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 166
                self.match(MT22Parser.ASS)
                self.state = 167
                self.espresso(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def expList(self):
            return self.getTypedRuleContext(MT22Parser.ExpListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_args




    def args(self):

        localctx = MT22Parser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(MT22Parser.LB)
            self.state = 173
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.FALSE) | (1 << MT22Parser.TRUE) | (1 << MT22Parser.SUB) | (1 << MT22Parser.NOT) | (1 << MT22Parser.LB) | (1 << MT22Parser.LCB) | (1 << MT22Parser.INTEGERLIT) | (1 << MT22Parser.FLOATLIT) | (1 << MT22Parser.STRINGLIT) | (1 << MT22Parser.ID))) != 0):
                self.state = 172
                self.expList()


            self.state = 175
            self.match(MT22Parser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def espresso(self):
            return self.getTypedRuleContext(MT22Parser.EspressoContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def expList(self):
            return self.getTypedRuleContext(MT22Parser.ExpListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_expList




    def expList(self):

        localctx = MT22Parser.ExpListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expList)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 177
                self.espresso(0)
                self.state = 178
                self.match(MT22Parser.COMMA)
                self.state = 179
                self.expList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.espresso(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcType(self):
            return self.getTypedRuleContext(MT22Parser.FuncTypeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def variType(self):
            return self.getTypedRuleContext(MT22Parser.VariTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_typeType




    def typeType(self):

        localctx = MT22Parser.TypeTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_typeType)
        try:
            self.state = 187
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 184
                self.funcType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 185
                self.arrayType()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 186
                self.variType()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def arraySize(self):
            return self.getTypedRuleContext(MT22Parser.ArraySizeContext,0)


        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def variNoAuto(self):
            return self.getTypedRuleContext(MT22Parser.VariNoAutoContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayType




    def arrayType(self):

        localctx = MT22Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(MT22Parser.ARRAY)
            self.state = 190
            self.match(MT22Parser.LSB)
            self.state = 191
            self.arraySize()
            self.state = 192
            self.match(MT22Parser.RSB)
            self.state = 193
            self.match(MT22Parser.OF)
            self.state = 194
            self.variNoAuto()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraySizeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGERLIT(self):
            return self.getToken(MT22Parser.INTEGERLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def arraySize(self):
            return self.getTypedRuleContext(MT22Parser.ArraySizeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraySize




    def arraySize(self):

        localctx = MT22Parser.ArraySizeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arraySize)
        try:
            self.state = 200
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 196
                self.match(MT22Parser.INTEGERLIT)
                self.state = 197
                self.match(MT22Parser.COMMA)
                self.state = 198
                self.arraySize()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.match(MT22Parser.INTEGERLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariNoAutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)
